--- a/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
+++ b/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
@@ -3,11 +3,16 @@
   height: 100%;
   box-sizing: border-box;
   border-top: 4px solid var(--grey-lighter);
+  overflow: hidden;
+}
+
+.ContextBox__content {
+  width: 100%;
+  height: 100%;
   overflow: auto;
 }
 
 .ContextBox__table__wrapper {
-  overflow-y: auto;
   width: auto;
   white-space: nowrap;
 }
